[package]
name = "void_space_boat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
ipnetwork = "0.20.0"
itertools = "0.10.5"
log = "0.4"
mlua = { version = "0.8.7", features = ["luajit"] }
mysql_async = "0.31.2"
rlimit = "0.9.0"
spdlog-rs = { version = "0.3.7", features = ["multi-thread"] }
tokio = { version = "1.24.1", features = ["full"] }

[dev-dependencies]
envtestkit = "1.1.2"
